# steadystate

./: README.md  pyproject.toml
steadystate/: comparison.py  convergence.py  convergence_extra_transitions.py  convergence_tools.py  dist.py  extra_initial_dists.py  extra_transitions.py  main.py  simulation.py  simulation_extra_transitions.py  speed.py  start_comparison.py  tools.py  transitions.py
